[metadata]
name = pyoti
version = attr: pyoti.__version__
description = Python API for Threat Intelligence
long_description = file: README.md
long_description_content_type = text/markdown
author = goodlandsecurity
author_email = jj.josing@rhisac.org
license = GNU GPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Information Technology
    Topic :: Security
    Topic :: Utilities
platform = any
url = https://github.com/RH-ISAC/PyOTI
project_urls =
    Bug Tracker = https://github.com/RH-ISAC/PyOTI/issues
    Changelog = https://github.com/RH-ISAC/PyOTI/blob/master/CHANGELOG.md

[options]
zip_safe = false
packages = find:
python_requires = >=3.7
install_requires =
    requests
    aiodns
    disposable-email-domains

[options.extras_require]
jupyter_notebook =
    jupyterlab
    notebook

[options.packages.find]
exclude =
    examples*
    docs*
